# staring-into-the-void

./: .gitignore  CITATION.cff  LICENSE  README.md  Staring_Into_The_Void.md  pyproject.toml  run_phase1_methodology.py  run_pipeline.py  run_power_analysis.py  run_ztf_validation.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: OUTREACH.md  ROADMAP.md  SCIENCE_PITCH.md
notebooks/: 01_synthetic_proof_of_concept.ipynb  02_embedding_exploration.ipynb  03_ztf_real_data.ipynb  04_attenuation_experiment.ipynb  05_null_model_calibration.ipynb
scripts/: make_hero_figures.py
scripts/hf_jobs/: README.md  null_sweep.py  submit.py  summarize_run.py
src/void/: __init__.py
src/void/analysis/: anomaly.py  attenuation.py  population.py
src/void/data/: models.py  rubin.py  synthetic.py  ztf.py
src/void/embedding/: features.py  recurrence.py  takens.py
src/void/topology/: distances.py  null_model.py  persistence.py  sliding_window.py
src/void/viz/: plots.py
tests/: conftest.py  test_attenuation.py  test_embedding.py  test_null_model.py  test_persistence.py  test_rubin.py  test_symbolic_validation.py  test_synthetic.py
validation/: symbolic_diagrams.json  symbolic_persistence.wls
